--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <dt>Deep Learning / Machine Learning toolboxes:</dt>
             <dd><pre><code>Caffe | TensorFlow / Keras | TensorRT | PyTorch</code></pre></dd>
           <dt>Computer Vision / Image Processing tools/libraries:</dt>
-            <dd><pre><code>OpenCV | Matlab </code></pre></dd>
+            <dd><pre><code>OpenCV | Scikit-image | Scikit-Learn | Pillow | Matlab </code></pre></dd>
           <dt>Computer Graphics libraries:</dt>
             <dd><pre><code>OpenGL | glsl | WebGL | THREE.js | MeshLab </code></pre></dd>
           <dt>Computer Haptics libraries:</dt>
