--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University, and his B.s. in Computer Software Engineering from Tehran Azad University.
         As for his PhD research project he worked on Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection.
 
+        Postdoctoral research fellow at the Department of Radiology, University of British Columbia, Vancouver BC. Also Research Programmer at <a href="https://https://www.bccrc.ca/dept/io-programs/qurit/index.php/" target="_blank">Qurit Lab</a>, Department of Integrative Oncology, BC Cancer Research Institute, Vancouver, BC.
+        Former Postdoctoral research fellow at Qurit Lab, BC Cancer Research Institute, Vancouver BC. Former Computer Vision / Deep Learning Specialist at Abinsula s.r.l , Torino, Italia.
+        Also former Post-doc researcher at Computer Graphics and Vision Group, Department of Computer and Control Engineering, Polytechnic University of Turin, worked on Deep Learning based 3D multi-person tracking and pose estimation from multi-view cameras. 
+        He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University, and his B.s. in Computer Software Engineering from Tehran Azad University. 
+        As for his PhD research project he worked on Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection.
+
         </div>
 
         <br>
