--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
 
         <p><em><b>[</b>  <a href="https://amirhosein2c.github.io/assets/PDFs/Amirhosein_Toosi_CV.pdf" target="_blank">Resume</a> <b>]</b></em></p>
         <div style="text-align: justify">
-<!--          Computer Vision / Deep Learning Specialist at <a href="https://abinsula.com/" target="_blank">Abinsula s.r.l</a>, Torino, Italia.
-        Former Post-doc Researcher at <a href="https://areeweb.polito.it/ricerca/cgvg/people.html" target="_blank">Computer Graphics and Vision Group</a>, Department of Computer and Control Engineering, Polytechnic University of Turin, worked on Deep Learning based 3D multi-person tracking and pose estimation in sport events using multi-view cameras.
-        He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University, and his B.s. in Computer Software Engineering from Tehran Azad University.
-        As for his PhD research project he worked on Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection. -->
 
-        Postdoctoral research fellow at the Department of Radiology, University of British Columbia, Vancouver, BC. He is also Research Programmer at <a href="https://https://www.bccrc.ca/dept/io-programs/qurit/index.php/" target="_blank">Qurit Lab</a>, Department of Integrative Oncology, BC Cancer Research Institute, Vancouver, BC.
-        Former Postdoctoral research fellow at Qurit Lab and former Computer Vision / Deep Learning Specialist at Abinsula s.r.l , Torino, Italia. Computer Vision / Deep Learning Specialist at <a href="https://abinsula.com/" target="_blank">Abinsula s.r.l</a>, Torino, Italia.
-        Also former Post-doc researcher at <a href="https://areeweb.polito.it/ricerca/cgvg/people.html" target="_blank">Computer Graphics and Vision Group</a>, Department of Computer and Control Engineering, Polytechnic University of Turin. Worked on Deep Learning based 3D multi-person tracking and pose estimation from multi-view cameras. 
-        He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University.
-        As for his PhD research project he worked on Deep learning-based Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection.
+        > Postdoctoral research fellow at the Department of Radiology, University of British Columbia, Vancouver, BC. 
+        > He is also a Research Programmer at <a href="https://https://www.bccrc.ca/dept/io-programs/qurit/index.php/" target="_blank">Qurit Lab</a>, Department of Integrative Oncology, BC Cancer Research Institute, Vancouver, BC.
+        
+        > He was formerly a Postdoctoral research fellow at Qurit Lab also worked as a Computer Vision / Deep Learning Specialist at <a href="https://abinsula.com/" target="_blank">Abinsula s.r.l</a>, Torino, Italia.
+        > Also worked as a Post-doc researcher at <a href="https://areeweb.polito.it/ricerca/cgvg/people.html" target="_blank">Computer Graphics and Vision Group</a>, Department of Computer and Control Engineering, Polytechnic University of Turin. 
+        > He worked on Deep Learning based 3D multi-person tracking and pose estimation from multi-view cameras. 
+        > He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University.
+        > For his PhD research project he worked on Deep learning-based Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection.
         
         </div>
 
