--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p style="font-size:14px; font-style:italic; color:#293f63;">Computer Vision / Deep Learning<br>Specialist.</p>
         <p class="view"><a href="https://www.linkedin.com/in/amirhoseintoosi/" target="_blank">LinkedIn</a><br>
         <a href="https://scholar.google.it/citations?user=5NEos20AAAAJ&hl=en&oi=sra" target="_blank">Google Scholar</a><br>
-        <a href="https://github.com/Amirhosein2c" target="_blank">GitHub</a></p>
-        <a href="https://www.researchgate.net/profile/Amirhosein_Toosi2" target="_blank">ResearchGate</a><br>
+        <a href="https://github.com/Amirhosein2c" target="_blank">GitHub</a><br>
+        <a href="https://www.researchgate.net/profile/Amirhosein_Toosi2" target="_blank">ResearchGate</a></p>
 
 <!--         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -35,9 +35,10 @@
         <ul>
             <li>Postdoctoral research fellow at the Department of Radiology, University of British Columbia, Vancouver, BC.</li>
             <li>He is also a Research Programmer at <a href="https://https://www.bccrc.ca/dept/io-programs/qurit/index.php/" target="_blank">Qurit Lab</a>, Department of Integrative Oncology, BC Cancer Research Institute, Vancouver, BC.</li>
-            <li>He was formerly a Postdoctoral research fellow at Qurit Lab also worked as a Computer Vision / Deep Learning Specialist at <a href="https://abinsula.com/" target="_blank">Abinsula s.r.l</a>, Torino, Italia.</li>
-            <li>Also worked as a Post-doc researcher at <a href="https://areeweb.polito.it/ricerca/cgvg/people.html" target="_blank">Computer Graphics and Vision Group</a>, Department of Computer and Control Engineering, Polytechnic University of Turin. </li>
-            <li>He worked on Deep Learning based 3D multi-person tracking and pose estimation from multi-view cameras. </li>
+            <li>He was formerly a Postdoctoral research fellow at Qurit Lab</li>
+            <li>Also worked as a Computer Vision / Deep Learning Specialist at <a href="https://abinsula.com/" target="_blank">Abinsula s.r.l</a>, Torino, Italia.</li>
+            <li>He also worked as a Post-doc researcher at <a href="https://areeweb.polito.it/ricerca/cgvg/people.html" target="_blank">Computer Graphics and Vision Group</a>, Department of Computer and Control Engineering, Polytechnic University of Turin. </li>
+            <li>During his postdoctoral research fellowship he worked on Deep Learning based 3D multi-person tracking and pose estimation from multi-view cameras. </li>
             <li>He received his PhD in Computer and Control Engineering from Polytechnic University of Turin, his Master’s in Mechatronics Engineering (Human-Computer Interaction) from Qazvin Azad University.</li>
             <li>For his PhD research project he worked on Deep learning-based Feature Fusion methods for Pattern Recognition problems in Computer Vision, mainly focused on providing Deep Learning feature fusion based solutions for Biometrics Liveness Detection.</li>
         </ul>
